--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana speak-minion</title>
+
     <style>
         textarea {
             width: 80%;
@@ -12,6 +13,7 @@
             display: block;
             margin: 1rem;
             padding: 1rem;
+            border: 1 px solid blue;
         }
 
         #output {
@@ -21,16 +23,24 @@
             margin: 1rem;
             padding: 1rem;
         }
+        #btn-translate{
+            background-color: blue;
+            color: white;
+            text-shadow: violet;
+            font-weight: 800;
+            margin: inherit;
+        }
     </style>
+
 </head>
 
 <body>
-    <h1> talk banana minion app</h1>
+    <h1 style="text-align: center;"> talk banana minion app</h1>
     <textarea id="txt-input"
         placeholder="put your sentence in English here and we will convert it to banana for you"></textarea>
     <button id="btn-translate">Translate</button>
 
-    <div style="font-size: larger;"> See the Output here 👇</div>
+    <div style="font-size: larger; text-align: center;"> See the Output here 👇</div>
     <div id="output"></div>
     <script src="app.js" type="text/javascript"></script>
 </body>
